--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,8 @@
-1.0
+1.0.1
+
+* Update burpui-agent to 0.6.2
+
+1.0.0
 
 * #1 create first version from current burp2_server playbooks
 * Use systemd by default on Ubuntu 16+ and Centos/RedHat or Debian.
