update python36 on centos/redhat and burpui-agent to 0.6.4

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+1.1.0
+
+* update burpui-agent to 0.6.4 (Fix: sync pkgs requirements with burp-ui's `#300 <https://git.ziirish.me/ziirish/burp-ui/issues/300>`__)
+* Update python3 to python3.6 on Redhat/Centos
+
 1.0
 
 * #1 create first version from current burp2_server playbooks
