--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,8 @@
 1.1.0
 
-* update burpui-agent to 0.6.4 (Fix: sync pkgs requirements with burp-ui's `#300 <https://git.ziirish.me/ziirish/burp-ui/issues/300>`__)
+* update burpui-agent to 0.6.5 (Fix: sync pkgs requirements with burp-ui's `#300 <https://git.ziirish.me/ziirish/burp-ui/issues/300>`__)
 * Update python3 to python3.6 on Redhat/Centos
+* Default to python3 pip3 and pip3.6 (on Redhat/Centos7)
 
 1.0.2
 
