--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+1.3.0
+* update default burp-ui to 0.7.0
+* remove deprecated python2 support
+
 1.2.1
 
 * multiple fixes of missing vars and others tasks.
