--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,7 @@
 1.3.0
-* update default burp-ui to 0.7.0
+* keep default burp-ui-agent to 0.6.6
 * remove deprecated python2 support
+* test ubuntu 22.04
 
 1.2.1
 
