--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,10 @@
+2.0.0
+* virtualenv for python
+* burpui 1.0.0
+* remove tests for ubuntu 20.04
+* add tests for RedHat-Family 9
+* remove tests centos8
+
 1.3.0
 * keep default burp-ui-agent to 0.6.6
 * remove deprecated python2 support
